--- a/style.css
+++ b/style.css
@@ -30,6 +30,94 @@ header{
 }
 
 
+/*--------sign up----------------*/
+
+.sign-bg{
+ color: #fff;
+ background-color: #000; 
+ width: 100%;
+ min-height: 100vh;
+ align-items: center;
+ background-size: cover;
+ background-position: center;
+ background-attachment: fixed;
+ background-image: url(img/sign.jpg);
+
+ margin: 0;
+ padding: 0;
+ top: 10px;
+ left: 100px;
+ width: 100%;
+ box-sizing: border-box;
+
+ height: 1px;
+    
+ padding: 0 10px;
+ transition: all .3s;
+ width: 100%;
+ padding: 100px 25px;
+  
+  
+  
+}
+
+.sign-up{
+  color: #fff ;
+  background-color: red;
+  margin-right: 0;
+  flex-basis: calc(49.95% - 6px);
+  padding: 1.2em;
+  border-color: #CE451A;
+  border: 1px solid #fff;
+  display: flex;
+  text-align: center;
+  line-height: 1.5;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  border-radius: 5px;
+  text-decoration: none;
+  cursor: pointer;
+  padding: 2px 10px;
+  margin-left: 0;
+   
+  
+  }
+  
+  .sign-up a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 1.1em;
+    font-weight: 500;
+    padding-left: 2px;
+    
+    
+  }
+  
+
+
+  .log-in {
+  color: #fff;
+  background-color: rgba(0,0,0,.7);
+  border: 1px solid ;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+  padding: 2px 10px;
+  margin-left: 10px;
+
+    }
+
+
+
+
+/*sign-end -------------*/
+
+
+
 .navigation a {
     color: blue;
     text-decoration: none;
