--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ header{
  background-size: cover;
  background-position: center;
  background-attachment: fixed;
- background-image: url(img/sign.jpg);
+ background-image: url(img/12.jpg);
 
  margin: 0;
  padding: 0;
