--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ header{
  background-size: cover;
  background-position: center;
  background-attachment: fixed;
- background-image: url(img/12.jpg);
+ background-image: url(img/n3.jpg);
 
  margin: 0;
  padding: 0;
@@ -144,7 +144,7 @@ section{
     min-height: 100vh;
     display: flex;
     align-items: center;
-    background: url(img/n3.jpg) no-repeat;
+    background: url(img/12.jpg) no-repeat;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
