--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ section{
 }
 
 .main h2  span {
-    color: blue;
+    color: orange;
     font-size: 3em;
     
 
@@ -172,7 +172,7 @@ section{
 .title {
     display: flex;
     justify-content: center;
-    color: #3a6cf4;
+    color: orange;
     font-size: 2.2em;
     font-weight: 800;
     margin-bottom: 30px;
@@ -268,6 +268,7 @@ section{
     font-size: 1.3em;
     padding: 0 12px 0 0;
 }
+
 /*---------end ftr-----------*/
 @media (max-width:1023px){
     header{
@@ -370,7 +371,7 @@ section{
    user-select: none ;  
    align-items: center ;  
    justify-content: center ;  
-   background-color: cyan ;  
+   background-color: orange ;  
    font-family: 'Quicksand', sans-serif ;  
    -webkit-tap-highlight-color: transparent ;  
    transition: background-color var(--cubic-slider) ;  
