--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ section{
 .title {
     display: flex;
     justify-content: center;
-    color: orange;
+    color: red;
     font-size: 2.2em;
     font-weight: 800;
     margin-bottom: 30px;
