--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 
 
 header{
-    background-color:black ;
+    background-color:  rgba(0,0,0,.7); 
     width: 100%;
     position: fixed;
     z-index: 999;
