--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ header{
 
 .logo{
     text-decoration: none;
-    color: red ;
+    color: brown  ;
     font-weight: 700;
     font-size: 1.8em; 
     
@@ -137,7 +137,7 @@ background-color: rgba(0, 0, 1, 0.4);
 
 
 .navigation a {
-    color: orange ;
+    color: gold ;
     text-decoration: none;
     font-size: 1.1 em;
     font-weight: 500;
@@ -145,7 +145,7 @@ background-color: rgba(0, 0, 1, 0.4);
 
 }
 .navigation a:hover {
-    color : red 
+    color : brown  
 }
 
 section{
@@ -157,7 +157,7 @@ section{
     min-height: 100vh;
     display: flex;
     align-items: center;
-    background: url(img/12.jpg) no-repeat;
+    background: url(img/99.jpg) no-repeat;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -171,16 +171,56 @@ section{
 }
 
 .main h2  span {
-    color: orange;
+    color: brown ;
     font-size: 3em;
     
 
 }
+
+h3{
+  color: white;
+
+}
+
+
+
 .social-icons a {
     color: red;
     font-size: 1.7em;
     padding-right: 30px;
 }
+
+.start{
+  width: 150px;
+  background: none;
+  margin-bottom: 0px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  justify-content: center;
+  text-align: left ;
+  padding: 30px 15px;
+  color: rgb(248, 248, 248);
+  align-items: center;
+  position: relative;
+  background-color: brown;
+  color:  #000000;
+  border-radius: 500px;
+  font-size: inherit;
+  padding: 14px 32px;
+  cursor: pointer;
+
+  font-size: 14px;
+  line-height: 20px;
+  text-transform: none;
+  letter-spacing: normal ;
+  top: 20px;
+
+  
+
+}
+
 
 .title {
     display: flex;
