--- a/style.css
+++ b/style.css
@@ -424,7 +424,7 @@ h3{
    user-select: none ;  
    align-items: center ;  
    justify-content: center ;  
-   background-color: orange ;  
+   background-color: brown ;  
    font-family: 'Quicksand', sans-serif ;  
    -webkit-tap-highlight-color: transparent ;  
    transition: background-color var(--cubic-slider) ;  
