--- a/style.css
+++ b/style.css
@@ -179,6 +179,13 @@ section{
 
 h3{
   color: white;
+  display: block;
+  font-size: 1.17em;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
 
 }
 
