--- a/style.css
+++ b/style.css
@@ -304,7 +304,7 @@ h3{
     font-size: 1.5em;
 }
 .contact {
-    background-color: white;
+    background-color: grey;
 }
 
 /*---------footeer---------*/
